# promtgen

./: .gitignore  Evrensel_AI_Proje_Tasarim_Sistemi_Plani.md  README.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  style.css  test.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
apps/web-prototype/: app.js  index.html  package.json  test.js
docs/: acceptance-audit.md  architecture-v4.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: execution.rs  lib.rs  main.rs
src/ai/: chat-contract.js  gemini-provider.js  llm-provider.js  openai-provider.js  provider-registry.js
src/application/: approval-service.js  event-store.js  patch-policy.js  patch-transaction.js
src/artifact/: artifact-engine.js
src/core/: entity-store.js  modules.js  v3-application-service.js
src/decision/: decision-engine.js
src/discovery/: discovery-engine.js
src/domain/: artifact-dependencies.js  project-events.js  traceability-graph.js
src/exporters/: zip-exporter.js
src/planning/: project-profiler.js
src/presentation/: view-renderer.js
src/prompt/: prompt-engine.js
src/prompts/: planning-prompt.js  prompt-registry.js
src/react/: App.tsx  main.tsx  styles.css
src/security/: file-policy.js  safe-renderer.js  secret-detector.js
src/state/: app-state.js  project-state-v3.js  project-state.js  state-migrations.js
src/storage/: browser-storage-repository.js
src/task/: task-engine.js
src/v4/: agent-committee.js  ai-context.js  ai-discovery.js  boilerplate-generator.js  (+24 more)
(+86 files in other folders)
