[package]
name = "promtgen"
version = "4.0.0"
description = "PromtGen local-first desktop shell"
edition = "2021"

[lib]
name = "promtgen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
rfd = "0.15"
tokio = { version = "1", features = ["process", "time", "io-util", "rt"] }
